--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <div class="front flap"></div>
         <div class="front pocket"></div>
         <div class="letter">
-          <div class="words line1">To: Crush</div>
-          <div class="words line2">Dear crush, you are so beautiful</div>
-          <div class="words line3">That every time i see you</div>
-          <div class="words line4">my world stops,</div>
+          <div class="words line1">for you there</div>
+          <div class="words line2">Hii! How are u?</div>
+          <div class="words line3">I just want to say that</div>
+          <div class="words line4">I'm always be there for  u</div>
         </div>
         <div class="hearts">
           <div class="heart a1"></div>
