--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div class="words line1">for you there</div>
           <div class="words line2">Hii! How are u?</div>
           <div class="words line3">I just want to say that</div>
-          <div class="words line4">I'm always be there for  u</div>
+          <div class="words line4">I'm always be there for u <3</div>
         </div>
         <div class="hearts">
           <div class="heart a1"></div>
